deleting unused images

--- a/PARC/static/styles/team.css
+++ b/PARC/static/styles/team.css
@@ -782,7 +782,7 @@ section
 {
 	font-size: 16px;
 	font-weight: 700;
-	color: #D82C76;
+	color: #FFFFFF;
 }
 .schedule_location
 {
@@ -805,7 +805,7 @@ section
 }
 .schedule_b .schedule_list
 {
-	background: #D82C76;
+	background: #FFFFFF;
 }
 .schedule_list ul li
 {
