--- a/PARC/templates/index.html
+++ b/PARC/templates/index.html
@@ -2,6 +2,8 @@
 {%block content %}
 <title>Acceuil</title>
 
+
+
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/main_styles.css')}}">
 
 	<!-- Home -->
@@ -29,7 +31,7 @@
 
 										<div  style= "margin-bottom: 5px;">
 											<div class="home_text d-flex flex-row align-items-center justify-content-start">
-													<span style= "background-color:#D82C76;">+ de 200 &nbsp </span><span> &nbsp Licenciés</span>
+													<span>+ de</span> <span style= "background-color:#D82C76;">300  </span><span>  Licenciés</span>
 											</div>
 										</div>
 
@@ -53,13 +55,13 @@
 
 										<div  style= "margin-bottom: 5px;">
 											<div class="home_text d-flex flex-row align-items-center justify-content-start">
-													<span style= "background-color:#D82C76;">15 &nbsp </span><span> &nbsp Educateurs et Coach</span>
+													<span style= "background-color:#D82C76;">24  </span><span>  Educateurs et Coachs</span>
 											</div>
 										</div>
 
 										<div  style= "margin-bottom: 5px;">
 											<div class="home_text d-flex flex-row align-items-center justify-content-start">
-													<span style= "background-color:#D82C76;">Pour &nbsp </span><span> &nbsp 15 équipes</span>
+													<span >Pour</span> <span style= "background-color:#D82C76;">11 </span><span> équipes</span>
 											</div>
 										</div>
 
@@ -84,13 +86,13 @@
 
 										<div  style= "margin-bottom: 5px;">
 											<div class="home_text d-flex flex-row align-items-center justify-content-start">
-													<span style= "background-color:#D82C76;">30 &nbsp </span><span> &nbsp Bénévoles</span>
+													<span style= "background-color:#D82C76;">50  </span><span>  Encadrants/Dirigeants</span>
 											</div>
 										</div>
 
 										<div  style= "margin-bottom: 5px;">
 											<div class="home_text d-flex flex-row align-items-center justify-content-start">
-													<span style= "background-color:#D82C76;">3 &nbsp </span><span> &nbsp Terrains </span>
+													<span style= "background-color:#D82C76;">3  </span><span>  Terrains </span>
 											</div>
 										</div>
 
@@ -113,13 +115,13 @@
 
 										<div  style= "margin-bottom: 5px;">
 											<div class="home_text d-flex flex-row align-items-center justify-content-start">
-													<span style= "background-color:#D82C76;">Un unique &nbsp </span><span> &nbsp Club house </span>
+													<span style= "background-color:#D82C76;">500 </span><span>  Places pour le publique</span>
 											</div>
 									 </div>
 
 										<div  style= "margin-bottom: 5px;">
 											<div class="home_text d-flex flex-row align-items-center justify-content-start">
-													<span style= "background-color:#D82C76;">Des milliers &nbsp </span><span> &nbsp de supporters <a  href="https://www.facebook.com/PaysAurayRugbyClub/" ><i class="fa fa-facebook-square" style="font-size:36px"></i></a> </span>
+													<span style= "background-color:#D82C76;">Des milliers  </span><span>  de supporters <a  href="https://www.facebook.com/PaysAurayRugbyClub/" ><i class="fa fa-facebook-square" style="font-size:36px"></i></a> </span>
 											</div>
 									 </div>
 
@@ -131,7 +133,7 @@
 				</div>
 
 			</div>
-			<div class="home_slider_nav">Suivant</div>
+
 		</div>
 	</div>
 
@@ -145,7 +147,7 @@
 			<div class="row">
 				<div class="col">
 					<div class="section_title_container">
-						<div class="section_title text-center"><h1>Un peu d'histoire</h1></div>
+						<div class="section_title text-center"><h1>A propos du PARC</h1></div>
 					</div>
 				</div>
 			</div>
@@ -161,7 +163,7 @@
 
 
 							<div class="result_text">
-								<p>Le club a été fondé en .... bla bla Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan dolor id enim lacinia, sed feugiat ex suscipit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan dolor id enim lacinia, sed feugiat ex suscipit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan dolor id enim lacinia, sed feugiat ex suscipit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan dolor id enim lacinia, sed feugiat ex suscipit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan dolor id enim lacinia, sed feugiat ex suscipit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan dolor id enim lacinia, sed feugiat ex suscipit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan dolor id enim lacinia, sed feugiat ex suscipit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan dolor id enim lacinia, sed feugiat ex suscipit.</p>
+								<p>Le club a été fondé en 1972.... bla bla Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan dolor id enim lacinia, sed feugiat ex suscipit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan dolor id enim lacinia, sed feugiat ex suscipit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan dolor id enim lacinia, sed feugiat ex suscipit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan dolor id enim lacinia, sed feugiat ex suscipit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan dolor id enim lacinia, sed feugiat ex suscipit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan dolor id enim lacinia, sed feugiat ex suscipit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan dolor id enim lacinia, sed feugiat ex suscipit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan dolor id enim lacinia, sed feugiat ex suscipit.</p>
 							</div>
 
 					</div>
@@ -187,14 +189,14 @@
 				<!-- Team Item -->
 				<div class="col-lg-4">
 					<div class="team_large">
-						<div class="team_large_image"><img src="{{ url_for('static', filename='images/team_large_1.jpg')}}" alt=""></div>
+						<div class="team_large_image"><img src="{{ url_for('static', filename='images/president.png')}}" alt=""></div>
 						<div class="team_large_content text-center">
-							<div class="team_large_name"><a href="#">Mr le président</a></div>
+							<div class="team_large_name"><a href="#">Jean Claude Mothiron</a></div>
 							<div class="team_large_title">Président</div>
 							<div class="team_large_text">
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan dolor id enim lacinia, sed feugiat ex suscipit.</p>
 							</div>
-							<div class="team_large_history"><span>Past teams: </span><a href="#">Panthers</a>, <a href="#">The Cougars</a></div>
+
 						</div>
 					</div>
 				</div>
@@ -202,14 +204,14 @@
 				<!-- Team Item -->
 				<div class="col-lg-4">
 					<div class="team_large">
-						<div class="team_large_image"><img src="images/team_large_2.jpg" alt=""></div>
+						<div class="team_large_image"><img src="{{ url_for('static', filename='images/vicepres.png')}}" alt=""></div>
 						<div class="team_large_content text-center">
-							<div class="team_large_name"><a href="#">Chris Parker</a></div>
-							<div class="team_large_title">assistant coach</div>
+							<div class="team_large_name"><a href="#">Marc Capdeville</a></div>
+							<div class="team_large_title">Vice président</div>
 							<div class="team_large_text">
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan dolor id enim lacinia, sed feugiat ex suscipit.</p>
 							</div>
-							<div class="team_large_history"><span>Past teams: </span><a href="#">The Jaguars</a></div>
+
 						</div>
 					</div>
 				</div>
@@ -224,7 +226,7 @@
 							<div class="team_large_text">
 								<p>Joueuse de l'équipe de france ... Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan dolor id enim lacinia, sed feugiat ex suscipit.</p>
 							</div>
-							<div class="team_large_history"><span>Past teams: </span><a href="#">The Stars</a></div>
+							
 						</div>
 					</div>
 				</div>
@@ -248,7 +250,7 @@
 					<div class="team_small d-flex flex-sm-column flex-row align-items-center justify-content-sm-center justify-content-start">
 						<div class="team_small_image"><a href="#"><img src="{{ url_for('static', filename='images/people5.jpg')}}" alt=""></a><div>C</div></div>
 						<div class="team_small_content text-sm-center">
-							<div class="team_small_name"><a href="#">Sam Dean</a></div>
+							<div class="team_small_name"><a href="#">Sébastien Plouvier</a></div>
 							<div class="team_small_title">Coach senior (3/4)</div>
 						</div>
 					</div>
@@ -259,7 +261,7 @@
 					<div class="team_small d-flex flex-sm-column flex-row align-items-center justify-content-sm-center justify-content-start">
 						<div class="team_small_image"><a href="#"><img src="{{ url_for('static', filename='images/people6.jpg')}}" alt=""></a><div>C</div></div>
 						<div class="team_small_content text-sm-center">
-							<div class="team_small_name"><a href="#">Michael Doe</a></div>
+							<div class="team_small_name"><a href="#">Mickael Garcia</a></div>
 							<div class="team_small_title">préparateur physique</div>
 						</div>
 					</div>
@@ -316,9 +318,9 @@
 					<div class="milestone d-flex flex-row align-items-start justify-content-start">
 						<div class="milestone_icon"><img src="{{ url_for('static', filename='images/icon_1.svg')}}" alt="https://www.flaticon.com/authors/freepik"></div>
 						<div class="milestone_content">
-							<div class="milestone_counter" data-end-value="90" data-sign-after="">0</div>
+							<div class="milestone_counter" data-end-value="300" data-sign-after="">0</div>
 							<div class="milestone_title">Joueurs</div>
-							<div class="milestone_subtitle">Lorem ipsum dolor sit amet,</div>
+							<div class="milestone_subtitle">Toutes catégories</div>
 						</div>
 					</div>
 				</div>
@@ -342,7 +344,7 @@
 						<div class="milestone_content">
 							<div class="milestone_counter" data-end-value="3">0</div>
 							<div class="milestone_title">Terrains</div>
-							<div class="milestone_subtitle">Lorem ipsum dolor sit amet,</div>
+							<div class="milestone_subtitle">Entrainements et matchs</div>
 						</div>
 					</div>
 				</div>
@@ -401,18 +403,19 @@
 			<div class="row">
 				<div class="col">
 					<div class="section_title_container">
-						<div class="section_title"><h1>latest news</h1></div>
-						<div class="section_subtitle">What's next this month</div>
+						<div class="section_title"><h1>Les dernières nouvelles</h1></div>
+						<div class="section_subtitle">du PARC</div>
 					</div>
 				</div>
 			</div>
 			<div class="row news_row">
 
+				{% for post in posts%}
 				<!-- News Post -->
 				<div class="col-lg-4">
 					<div class="news_post">
 						<div class="news_post_image">
-							<img src="{{ url_for('static', filename='images/news_1.jpg')}}" alt="">
+							<img src="{{ url_for('static', filename='post_pics/'+post.image_file)}}" alt="">
 							<div class="news_post_date">
 								<a href="#">
 									<div class="d-flex flex-column align-items-center justify-content-center">
@@ -428,69 +431,15 @@
 									<li><a href="blog.html">News</a></li>
 								</ul>
 							</div>
-							<div class="news_post_title"><a href="blog.html">T-shirt release date</a></div>
+							<div class="news_post_title"><a href="blog.html">{{ post.title }}</a></div>
 							<div class="news_post_text">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan dolor id enim lacinia, sed feugiat ex suscipit.</p>
+								<p> {{ post.content }}</p>
 							</div>
 						</div>
 					</div>
 				</div>
+				{%endfor%}
 
-				<!-- News Post -->
-				<div class="col-lg-4">
-					<div class="news_post">
-						<div class="news_post_image">
-							<img src="{{ url_for('static', filename='images/news_2.jpg')}}" alt="">
-							<div class="news_post_date">
-								<a href="#">
-									<div class="d-flex flex-column align-items-center justify-content-center">
-										<div>10</div>
-										<div>sept</div>
-									</div>
-								</a>
-							</div>
-						</div>
-						<div class="news_post_content">
-							<div class="tags">
-								<ul class="d-flex flex-row align-items-start justify-content-start flex-wrap">
-									<li><a href="blog.html">News</a></li>
-								</ul>
-							</div>
-							<div class="news_post_title"><a href="blog.html">Junior league Openings</a></div>
-							<div class="news_post_text">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan dolor id enim lacinia, sed feugiat ex suscipit.</p>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<!-- News Post -->
-				<div class="col-lg-4">
-					<div class="news_post">
-						<div class="news_post_image">
-							<img src="{{ url_for('static', filename='images/news_3.jpg')}}" alt="">
-							<div class="news_post_date">
-								<a href="#">
-									<div class="d-flex flex-column align-items-center justify-content-center">
-										<div>10</div>
-										<div>sept</div>
-									</div>
-								</a>
-							</div>
-						</div>
-						<div class="news_post_content">
-							<div class="tags">
-								<ul class="d-flex flex-row align-items-start justify-content-start flex-wrap">
-									<li><a href="blog.html">News</a></li>
-								</ul>
-							</div>
-							<div class="news_post_title"><a href="blog.html">The summer transfers</a></div>
-							<div class="news_post_text">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan dolor id enim lacinia, sed feugiat ex suscipit.</p>
-							</div>
-						</div>
-					</div>
-				</div>
 
 			</div>
 		</div>
