--- a/PARC/templates/layout.html
+++ b/PARC/templates/layout.html
@@ -13,9 +13,11 @@
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='plugins/OwlCarousel2-2.3.4/animate.css')}}">
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/responsive.css')}}">
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/about_responsive.css')}}">
-
+<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap" rel="stylesheet">
 </head>
 <body>
+
+
 
 <div class="super_container">
 
@@ -50,9 +52,9 @@
 									<div class="logo_container text-center"><div class="trans_400"><a href="#"><img src="{{ url_for('static', filename='images/logo.png')}}" alt=""></a></div></div>
 									<div>
 										<ul class="d-flex flex-row align-items-start justify-content-start">
-											<li><a href="#">Jeunes</a></li>
+											<li><a href="{{ url_for('main.jeunes')}}">Jeunes</a></li>
 											<li><a href="{{ url_for('main.blog')}}">Le Blog</a></li>
-											<li><a href="contact.html">Sponsors</a></li>
+											<li><a href="{{ url_for('main.sponsors')}}">Sponsors</a></li>
 										</ul>
 									</div>
 								</div>
@@ -120,7 +122,7 @@
   				<div class="row">
   					<div class="col-lg-5 order-lg-1 order-3">
   						<div class="footer_image d-flex flex-column align-items-lg-start align-items-center justify-content-end">
-  							<div><img src="{{ url_for('static', filename='images/parc.png')}}" alt=""></div>
+  							<div><img style="max-width: 90%;" src="{{ url_for('static', filename='images/parc2.png')}}" alt=""></div>
   						</div>
   					</div>
   					<div class="col-lg-3 order-lg-2 order-1">
