--- a/PARC/static/styles/main_styles.css
+++ b/PARC/static/styles/main_styles.css
@@ -751,7 +751,6 @@ section
 }
 .home_text
 {
-	background: #004376;
 	padding-left: 0px;
 	padding-right: 0px;
 	padding-top: 0px;
@@ -759,10 +758,18 @@ section
 }
 .home_text span
 {
-	font-size: 60px;
+	font-size: 40px;
 	font-weight: 700;
 	color: #FFFFFF;
 	line-height: 1.2;
+	background: #004376;
+	padding-left: 20px;
+	padding-right: 20px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	font-family: 'Roboto Condensed', sans-serif;
+	font-weight: 700;
+	text-transform: uppercase;
 }
 .home_text > div
 {
