--- a/PARC/templates/blog.html
+++ b/PARC/templates/blog.html
@@ -25,83 +25,34 @@
 				<div class="col-lg-9">
 					<div class="blog_posts">
 
-						<!-- Blog Post -->
-						<div class="blog_post">
-							<div class="blog_post_image">
-								<img src="{{ url_for('static', filename='images/New_1.png')}}">
-								<div class="blog_post_date">
-									<a href="#">
-										<div class="d-flex flex-column align-items-center justify-content-center">
-											<div>13</div>
-											<div>sept</div>
-										</div>
-									</a>
-								</div>
-							</div>
-							<div class="blog_post_content">
-								<div class="tags">
-									<ul class="d-flex flex-row align-items-start justify-content-start flex-wrap">
-										<li><a href="blog.html">News</a></li>
-									</ul>
-								</div>
-								<div class="blog_post_title"><a href="blog.html">Dernier entrainement avant Poitiers</a></div>
-								<div class="blog_post_text">
-									<p>Dernier entrainement pour les senior A et B avant le déplacement à Poitiers ... Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan dolor id enim lacinia, sed feugiat ex suscipit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan dolor id enim lacinia, sed feugiat ex suscipit.</p>
-								</div>
-							</div>
-						</div>
 
-						<!-- Blog Post -->
-						<div class="blog_post">
-							<div class="blog_post_image">
-								<img src="images/blog_2.jpg" alt="">
-								<div class="blog_post_date">
-									<a href="#">
-										<div class="d-flex flex-column align-items-center justify-content-center">
-											<div>10</div>
-											<div>sept</div>
-										</div>
-									</a>
+						{% for post in posts%}
+							<!-- Blog Post -->
+							<div class="blog_post">
+								<div class="blog_post_image">
+									<img src="{{ url_for('static', filename='post_pics/'+post.image_file)}}">
+									<div class="blog_post_date">
+										<a href="#">
+											<div class="d-flex flex-column align-items-center justify-content-center">
+												<div>{{post.date_posted.day}}</div>
+												<div>{{month[post.date_posted.strftime("%B")]  }}</div>
+											</div>
+										</a>
+									</div>
+								</div>
+								<div class="blog_post_content">
+									<div class="tags">
+										<ul class="d-flex flex-row align-items-start justify-content-start flex-wrap">
+											<li><a href="blog.html">News</a></li>
+										</ul>
+									</div>
+									<div class="blog_post_title"><a href="blog.html">{{ post.title }}</a></div>
+									<div class="blog_post_text">
+										<p>{{ post.content }}</p>
+									</div>
 								</div>
 							</div>
-							<div class="blog_post_content">
-								<div class="tags">
-									<ul class="d-flex flex-row align-items-start justify-content-start flex-wrap">
-										<li><a href="blog.html">News</a></li>
-									</ul>
-								</div>
-								<div class="blog_post_title"><a href="blog.html">3 new transfers for this summer</a></div>
-								<div class="blog_post_text">
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan dolor id enim lacinia, sed feugiat ex suscipit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan dolor id enim lacinia, sed feugiat ex suscipit.</p>
-								</div>
-							</div>
-						</div>
-
-						<!-- Blog Post -->
-						<div class="blog_post">
-							<div class="blog_post_image">
-								<img src="images/blog_3.jpg" alt="https://unsplash.com/@aloragriffiths">
-								<div class="blog_post_date">
-									<a href="#">
-										<div class="d-flex flex-column align-items-center justify-content-center">
-											<div>10</div>
-											<div>sept</div>
-										</div>
-									</a>
-								</div>
-							</div>
-							<div class="blog_post_content">
-								<div class="tags">
-									<ul class="d-flex flex-row align-items-start justify-content-start flex-wrap">
-										<li><a href="blog.html">News</a></li>
-									</ul>
-								</div>
-								<div class="blog_post_title"><a href="blog.html">Woman’s league is comming strong</a></div>
-								<div class="blog_post_text">
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan dolor id enim lacinia, sed feugiat ex suscipit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan dolor id enim lacinia, sed feugiat ex suscipit.</p>
-								</div>
-							</div>
-						</div>
+						{%endfor%}
 
 					</div>
 				</div>
@@ -112,7 +63,7 @@
 						<div class="latest_games">
 							<div class="sidebar_title_container">
 								<div class="sidebar_title"><h3>L'actu du rugby</h3></div>
-								<div class="sidebar_subtitle">Via le Rugbynistère</div>
+								<div class="sidebar_subtitle">Via le Rugbyrama</div>
 							</div>
 
 							<!-- Latest Games -->
@@ -139,7 +90,7 @@
 
 							<!-- Tickets -->
 							<div class="tickets">
-								
+
 							</div>
 
 						</div>
