--- a/PARC/templates/create_post.html
+++ b/PARC/templates/create_post.html
@@ -1,21 +1,25 @@
 {% extends "layout.html" %}
 {%block content %}
+
+
+
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/main_styles.css')}}">
 <!-- Home -->
 
-<div class="home d-flex flex-column align-items-start justify-content-end">
-  <div class="parallax_background parallax-window" data-parallax="scroll" data-image-src="{{ url_for('static', filename='images/XX.png')}}" data-speed="0.8"></div>
-  <div class="container">
+<div style = "margin-left: 100px;  margin-right: 100px;">
+
+
+  <div class="container" style="margin-top: 200px;">
     <div class="row">
       <div class="col text-center">
         <div class="home_text"> <span>Creer un post de blog</span></div>
       </div>
     </div>
   </div>
-</div>
+
 
 <div class = "content-section">
-    <form method="POST" action="">
+    <form method="POST" action="" enctype="multipart/form-data">
         {{ form.hidden_tag() }}
         <!-- les class sont pour le bootstrap -->
         <fieldset>
@@ -51,13 +55,18 @@
             </div>
 
             <div class='form-group'>
-              {{ form.picture.label()}}
-              {{ form.picture(class = "form-control-file", id ="upload")}}
-              {% if form.picture.errors %}
-                {% for error in form.picture.errors %}
-                  <span class="text-danger">{{error}}</span>
-                {% endfor%}
-              {% endif%}
+              {{ form.picture.label(class="form-control-label")}}
+              <!-- On ajoute une class error de bootstrap et on les checks -->
+                {% if form.picture.errors %}
+                  {{ form.picture(class="form-control form-control-lg is-invalid")}}
+                  <div class="invalid-feedback">
+                    {% for error in form.picture.errors %}
+                      <span>{{error}}</span>
+                    {% endfor%}
+                  </div>
+                  {% else %}
+                    {{ form.picture(class="form-control form-control-lg")}}
+                {% endif%}
             </div>
 
 
@@ -66,5 +75,48 @@
           {{ form.submit(class = "btn btn-outline-info")}}
         </div>
     </form>
+
+
+
+
+
+</div>
+
+<br />
+<br />
+<br />
+<h2> Effacer des posts </h2>
+
+
+	{% for post in posts%}
+
+  <div>
+    <!-- modal form bootstrap asking if user is sure to delete post see https://getbootstrap.com/docs/4.1/components/modal/-->
+    {{ post.title }} le {{ post.date_posted.strftime('%d/%m/%Y') }} <button type="button" class="btn btn-danger btn-sm m-1" data-toggle="modal" data-target="#deleteModal"><i class="far fa-trash-alt"></i>Effacer</button>
+  </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="deleteModalLabel">Effacer le Post ?</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            ...
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
+            <form action = "{{url_for('main.delete_post', post_id = post.id)}}" method = "POST">
+              <input class="btn btn-danger" type="submit" value="Effacer">
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  {%endfor%}
 </div>
 {% endblock content %}
