--- a/PARC/templates/feminine.html
+++ b/PARC/templates/feminine.html
@@ -36,7 +36,7 @@
 				<div class="col-xl-6 order-xl-2 order-1">
 					<div class="about_content">
 						<div class="about_content_container">
-							<div class="section_title_container">
+							<div id="equipe" class="section_title_container">
 								<div class="section_title"><h1>about PARC</h1></div>
 							</div>
 							<div class="about_title">mission&vision</div>
@@ -54,10 +54,38 @@
 		</div>
 	</div>
 
+	<div class="section_title_container" style='margin-top: 50px;'>
+		<div class="section_title"><h1>Le classement</h1></div>
+	</div>
+
+	<div id="class" class="about">
+		<div class="container">
+			<div class="row">
+				<!-- About content -->
+				<div class="col-xl-6 order-xl-1 order-2 ">
+					<div class="about_content">
+						<div class="about_content_container">
+							<script src="https://cdnjs.cloudflare.com/ajax/libs/iframe-resizer/3.5.5/iframeResizer.min.js"></script><script>if(!window._rsz){window._rsz=function(){var i=iFrameResize({checkOrigin:false,interval:100});};if(document.readyState!="loading"){_rsz()}else{document.addEventListener("DOMContentLoaded",_rsz)}}</script><iframe id="5d8c7d5295b58f0a1ae8cf73" src="https://scorenco.com/widget/5d8c7d5295b58f0a1ae8cf73/?auto_height=true" style="display: block; width: 100%; overflow: auto; margin: auto; border-width: 0px;" scrolling="no"></iframe><a style="font-size:11px" target="_blank" href="https://scorenco.com/rugby/clubs/pays-d-auray-rugby-club/">Pays d'Auray Rugby Club sur Score'n'co</a>
+						</div>
+					</div>
+				</div>
+
+				<!-- About Image -->
+				<div class="col-xl-6 order-xl-2 order-1">
+					<div class="about_image">
+						<div class="background_image" style="background-image:url(static/images/Fem1.jpeg)"></div>
+						<img src="images/about_1.jpg" alt="">
+					</div>
+				</div>
+
+		</div>
+	</div>
+</div>
+
 
 			<!-- Schedule -->
 
-			<div class="schedule">
+			<div id="ent"class="schedule">
 				<div class="container">
 					<div class="row">
 						<div class="col">
