--- a/PARC/templates/index.html
+++ b/PARC/templates/index.html
@@ -142,7 +142,7 @@
 
 	<!-- Results -->
 
-	<div class="results">
+	<div id ="apropos" class="results">
 		<div class="container">
 			<div class="row">
 				<div class="col">
@@ -174,7 +174,7 @@
 
 	<!-- Team -->
 
-	<div class="team">
+	<div id = "trombi" class="team">
 		<div class="container">
 			<div class="row">
 				<div class="col">
@@ -226,7 +226,7 @@
 							<div class="team_large_text">
 								<p>Joueuse de l'équipe de france ... Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan dolor id enim lacinia, sed feugiat ex suscipit.</p>
 							</div>
-							
+
 						</div>
 					</div>
 				</div>
@@ -367,7 +367,7 @@
 
 	<!-- Player of the month -->
 
-	<div class="player">
+	<div id="joueur" class="player">
 		<div class="container">
 			<div class="row">
 				<div class="col-xl-6">
@@ -398,7 +398,7 @@
 
 	<!-- News -->
 
-	<div class="news">
+	<div id="news" class="news">
 		<div class="container">
 			<div class="row">
 				<div class="col">
