--- a/PARC/templates/senior.html
+++ b/PARC/templates/senior.html
@@ -52,7 +52,7 @@
 					</div>
 
 					<!-- About content -->
-					<div class="col-xl-6 order-xl-2 order-1">
+					<div id="equipe" class="col-xl-6 order-xl-2 order-1">
 						<div class="about_content">
 							<div class="about_content_container">
 								<div class="section_title_container">
@@ -79,7 +79,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col">
-					<div class="section_title_container">
+					<div id = "match" class="section_title_container">
 						<div class="section_title text-center"><h1>Prochains matchs</h1></div>
 					</div>
 				</div>
@@ -99,7 +99,7 @@
 			<div class="row">
 				<!-- Upcoming Events -->
 				<div class="col-xl-6">
-					<div class="section_title_container">
+					<div id = "class" class="section_title_container">
 						<div class="section_title light"><h1>Classement (équipe A)</h1></div>
 						<div class="section_subtitle">Resultats et calendrier</div>
 					</div>
@@ -140,7 +140,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col">
-						<div class="section_title_container">
+						<div id = "ent" class="section_title_container">
 							<div class="section_title"><h1>Les entrainements</h1></div>
 							<div class="section_subtitle">Pour les trois équipes</div>
 						</div>
