--- a/PARC/static/styles/main_styles.css
+++ b/PARC/static/styles/main_styles.css
@@ -18,6 +18,7 @@
 11. News
 12. CTA
 13. Footer
+14. drawdown
 
 
 ******************************/
@@ -356,7 +357,7 @@ section
 }
 .header.scrolled .main_nav_container_outer
 {
-	height: 110px;
+	height: 70px;
 }
 .header.scrolled .logo_container > div
 {
