--- a/PARC/templates/layout.html
+++ b/PARC/templates/layout.html
@@ -121,6 +121,40 @@
 				</div>
 			</div>
 
+			<!-- Header bar -->
+			<div class="header_bar">
+				<div class="container">
+					<div class="row">
+						<div class="col">
+							<div class="header_bar_content d-flex flex-row align-items-center justify-content-start">
+								<div class="header_links">
+									<ul class="d-flex flex-row align-items-start justify-content-start">
+										<li><a href="#">Nos partenaire</a></li>
+										<li><a href="#">Cité Marines</a></li>
+										<li><a href="#">Auray quiberon TA</a></li>
+										<li><a href="#">Charcuterie du Blavet</a></li>
+										<li><a href="#">EPRIM</a></li>
+									</ul>
+								</div>
+								<div class="header_bar_right ml-auto d-flex flex-row align-items-center justify-content-start">
+
+									<!-- Header LIVE -->
+									<div class="header_live">
+										<a href="#">
+											<div class="d-flex flex-row align-items-center justify-content-start">
+												<div style="padding-left: 0px;">live</div>
+
+											</div>
+										</a>
+									</div>
+
+
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 
 
 		</div>
