--- a/PARC/templates/layout.html
+++ b/PARC/templates/layout.html
@@ -89,6 +89,7 @@
 														<a href="{{ url_for('main.jeunes')}}">U6/U8/U10</a>
 														<a href="{{ url_for('main.jeunes')}}">U12/U14</a>
 														<a href="{{ url_for('main.jeunes')}}">U16/U19</a>
+														<a href="{{ url_for('main.jeunes')}}#ent">Entrainements</a>
 													</div>
 												</div>
 											</li>
@@ -142,13 +143,17 @@
 						<li><a href="{{ url_for('main.home')}}">Le club</a></li>
 						<li><a href="{{ url_for('main.senior')}}">Sénior</a></li>
 						<li><a href="{{ url_for('main.feminine')}}">Féminines</a></li>
-						<li><a href="contact.html">contact</a></li>
+						<li><a href="{{ url_for('main.jeunes')}}">Jeunes</a></li>
+						<li><a href="{{ url_for('main.blog')}}">Blog</a></li>
+						<li><a href="{{ url_for('main.sponsors')}}">Partenaires</a></li>
+						<li><a href="#">Equipements</a></li>
+						<li><a href="#">Commission médicale</a></li>
 					</ul>
 				</nav>
 				<div class="menu_links">
 					<ul class="d-flex flex-row align-items-start justify-content-start">
-						<li><a href="#">GET Tickets</a></li>
-						<li><a href="#">Shop</a></li>
+						<li><a href="#"></a></li>
+						<li><a href="#">Contact</a></li>
 					</ul>
 				</div>
 			</div>
