--- a/PARC/templates/jeunes.html
+++ b/PARC/templates/jeunes.html
@@ -53,7 +53,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col">
-							<div class="section_title_container">
+							<div id = "ent" class="section_title_container">
 								<div class="section_title"><h1>Agenda des entrainements</h1></div>
 								<div class="section_subtitle">Pour toutes les catégories</div>
 							</div>
