port running mod

--- a/PARC/templates/sponsors.html
+++ b/PARC/templates/sponsors.html
@@ -38,7 +38,7 @@
 							<div class="section_subtitle">Depuis 201x</div>
 						</div>
 						<div class="info_text">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan dolor id enim lacinia, sed feugiat ex suscipit. Nunc molestie malesuada pellentesque. Quisque mattis ante ut nisl tristique ornare. Aenean interdum dictum augue, quis egestas erat lacinia in. Proin dictum commodo nulla ut mattis. Pellentesque vel commodo nisi. Donec eget purus eget ex efficitur tristique. Nulla ut mollis justo.</p>
+							<p>Cité Marine, le leader français du poisson enrobé et des légumes élaborés. Fondée en 1990, Cité Marine devient le leader des produits de la mer avec le poisson pané. Depuis 28 ans, l'innovation est au cœur de la stratégie avec l'introduction de nouveautés dont une nouvelle gamme autour des produits de la terre et une autre autour des solutions végétales. Sa politique sécurité et qualité est également une priorité avec notamment l'obtention de nouvelles certifications.</p>
 						</div>
 
 					</div>
@@ -58,7 +58,7 @@
 								<div class="section_subtitle">Depuis 201x</div>
 							</div>
 							<div class="info_text">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan dolor id enim lacinia, sed feugiat ex suscipit. Nunc molestie malesuada pellentesque. Quisque mattis ante ut nisl tristique ornare. Aenean interdum dictum augue, quis egestas erat lacinia in. Proin dictum commodo nulla ut mattis. Pellentesque vel commodo nisi. Donec eget purus eget ex efficitur tristique. Nulla ut mollis justo.</p>
+								<p>La communauté de communes Auray Quiberon Terre Atlantique  a été créée le 1er janvier 2014, par la fusion de quatre communautés de communes (Auray communauté, Communauté de communes de la Côte des Mégalithes, Communauté de communes de la Ria d'Étel et Communauté de communes des Trois Rivières), rejointes par quatre communes jusqu'alors non membres d'un EPCI (Hœdic, Houat, Quiberon et Saint-Pierre-Quiberon)1. Elle regroupe toutes les communes du Pays d'Auray à l'exception de celles de la Communauté de communes de Belle-Île-en-Mer.</p>
 							</div>
 
 						</div>
@@ -114,7 +114,11 @@
 						<div class="section_subtitle">Depuis 201x</div>
 					</div>
 					<div class="info_text">
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan dolor id enim lacinia, sed feugiat ex suscipit. Nunc molestie malesuada pellentesque. Quisque mattis ante ut nisl tristique ornare. Aenean interdum dictum augue, quis egestas erat lacinia in. Proin dictum commodo nulla ut mattis. Pellentesque vel commodo nisi. Donec eget purus eget ex efficitur tristique. Nulla ut mollis justo.</p>
+						<p>Créateur d’immobilier depuis plus de 30 ans. La société EPRIM, fondée à Vannes en 1985, est l’un des acteurs incontournables des métiers de l’immobilier en France et notamment en Bretagne.
+Compétences pluridisciplinaires
+Les compétences pluridisciplinaires d’Eprim dans les résidences principales, les investissements locatifs, l’immobilier de loisirs, les terrains à bâtir et l’immobilier d’entreprises assurent à chaque client une prise en charge personnalisée et adaptée à ses aspirations de logement.
+Lieux de vie harmonieux et fonctionnels
+La qualité des emplacements, l’élégance architecturale des résidences, la rigueur de construction, le choix des matériaux contribuent à la réalisation de lieux de vie harmonieux et fonctionnels parfaitement intégrés à l’environnement.</p>
 					</div>
 
 				</div>
@@ -150,7 +154,11 @@
 						<div class="section_subtitle">Depuis 201x</div>
 					</div>
 					<div class="info_text">
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan dolor id enim lacinia, sed feugiat ex suscipit. Nunc molestie malesuada pellentesque. Quisque mattis ante ut nisl tristique ornare. Aenean interdum dictum augue, quis egestas erat lacinia in. Proin dictum commodo nulla ut mattis. Pellentesque vel commodo nisi. Donec eget purus eget ex efficitur tristique. Nulla ut mollis justo.</p>
+						<p>Brets est une entreprise 100% familiale, à taille humaine basée à Pontivy dans le Morbihan.
+Leur credo depuis 1995 : être le chipsier français en valorisant la qualité de la pomme de terre bretonne.
+Aujourd’hui, l’entreprise compte plus de 300 salariés avec 2 sites de production.
+Ils sont les spécialistes de la chips et produisons plus d’une chips sur 3 consommée en France.
+Ils produisent 27 500T de chips soit 110 000 T de pommes de terre transformées par an.</p>
 					</div>
 
 				</div>
@@ -177,7 +185,15 @@
 						<div class="section_subtitle">Depuis 201x</div>
 					</div>
 					<div class="info_text">
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan dolor id enim lacinia, sed feugiat ex suscipit. Nunc molestie malesuada pellentesque. Quisque mattis ante ut nisl tristique ornare. Aenean interdum dictum augue, quis egestas erat lacinia in. Proin dictum commodo nulla ut mattis. Pellentesque vel commodo nisi. Donec eget purus eget ex efficitur tristique. Nulla ut mollis justo.</p>
+						<p>Fondée en 1919 à Locmariaquer sur les bords du Golfe du Morbihan, la société « Transports Le Bayon » est une entreprise familiale créée par François Le Bayon, grand-père de l’actuel dirigeant. L‘exploitation des lignes régulières de voyageurs au départ de Locmariaquer, La Trinité sur Mer, Carnac et Quiberon vers Auray et Ste Anne d’Auray en est la principale activité jusque dans les années 1960.
+						</p>
+						<p>Aujourd'hui située en Bretagne Sud, à proximité du Golfe du Morbihan, entre Auray et Vannes, Auray Voyages offre une large gamme de prestations de service en autocar :
+	Déplacements d’affaires,
+	Navettes hôtels, gares, aéroports (Lorient, Nantes, Paris), gares maritimes (Quiberon/Belle Ile en Mer, Lorient/Groix),
+	Circuits touristiques, séjours, excursions en Morbihan, Bretagne, France, Europe
+	Location d’autocars avec conducteurs,
+	Déplacements scolaires et périscolaires, séjours linguistiques, voyages éducatifs,
+	Lignes régulières interurbaines vers Vannes et Auray</p>
 					</div>
 
 				</div>
@@ -196,7 +212,13 @@
 					<div class="section_subtitle">Depuis 201x</div>
 				</div>
 				<div class="info_text">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan dolor id enim lacinia, sed feugiat ex suscipit. Nunc molestie malesuada pellentesque. Quisque mattis ante ut nisl tristique ornare. Aenean interdum dictum augue, quis egestas erat lacinia in. Proin dictum commodo nulla ut mattis. Pellentesque vel commodo nisi. Donec eget purus eget ex efficitur tristique. Nulla ut mollis justo.</p>
+					<p>Depuis 60 ans, Tallec élabore des charcuteries reconnues pour leurs qualités gustatives exceptionnelles.
+leur défi, répondre aux exigences croissantes de nos clients en terme de sécurité alimentaire, de nouveaux conditionnements, sans altérer nos recettes traditionnelles.
+Au delà de leurs procédés de fabrication, jalousement protégés, Tallec utilise des viandes et des ingrédients naturels frais :
+- viandes de porcs bretons, fermiers, label rouge ou bio,
+- poireaux, carottes, oignons, persil, lait cru ...
+Ils moulent à la main les pâtés dans des terrines en grès pour favoriser la diffusion des arômes au cour de la cuisson au four.
+Ils demeurent l’un des derniers fabricants de jambons à l’Ancienne, le numéro un français. leurs jambons sont maturés lentement, travaillés à la main, salés à la veine, cuits doucement au torchon avec leur os dans un bouillon de légumes frais.</p>
 				</div>
 
 			</div>
