--- a/PARC/templates/layout.html
+++ b/PARC/templates/layout.html
@@ -79,7 +79,7 @@
 											</li>
 										</ul>
 									</div>
-									<div class="logo_container text-center"><div class="trans_400"><a href="#"><img src="{{ url_for('static', filename='images/logo.png')}}" alt=""></a></div></div>
+									<div class="logo_container text-center"><div class="trans_400"><a href="{{ url_for('main.home')}}"><img src="{{ url_for('static', filename='images/logo.png')}}" alt=""></a></div></div>
 									<div>
 										<ul class="d-flex flex-row align-items-start justify-content-start">
 											<li >
@@ -130,11 +130,15 @@
 							<div class="header_bar_content d-flex flex-row align-items-center justify-content-start">
 								<div class="header_links">
 									<ul class="d-flex flex-row align-items-start justify-content-start">
-										<li><a href="#">Nos partenaire</a></li>
-										<li><a href="#">Cité Marines</a></li>
-										<li><a href="#">Auray quiberon TA</a></li>
+										<li><a>Nos partenaire</a></li>
+										<li><a href="https://www.cite-marine.fr/">Cité Marines</a></li>
+										<li><a href="http://www.auray-quiberon.fr/auray-quiberon-terre-atlantique-3.html">Auray quiberon TA</a></li>
 										<li><a href="#">Charcuterie du Blavet</a></li>
-										<li><a href="#">EPRIM</a></li>
+										<li><a href="http://www.eprimgroupe.fr/">EPRIM</a></li>
+										<li><a href="#"> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  </a></li>
+										<li><a href="https://www.brets.fr/">Brets</a></li>
+										<li><a href="https://www.auray-voyages.com/">Auray Voyage</a></li>
+										<li><a href="http://jptallec.fr/">Tallec</a></li>
 									</ul>
 								</div>
 								<div class="header_bar_right ml-auto d-flex flex-row align-items-center justify-content-start">
