--- a/PARC/templates/layout.html
+++ b/PARC/templates/layout.html
@@ -130,7 +130,7 @@
 							<div class="header_bar_content d-flex flex-row align-items-center justify-content-start">
 								<div class="header_links">
 									<ul class="d-flex flex-row align-items-start justify-content-start">
-										<li><a>Nos partenaire</a></li>
+										<li><a>Nos partenaires</a></li>
 										<li><a href="https://www.cite-marine.fr/">Cité Marines</a></li>
 										<li><a href="http://www.auray-quiberon.fr/auray-quiberon-terre-atlantique-3.html">Auray quiberon TA</a></li>
 										<li><a href="#">Charcuterie du Blavet</a></li>
@@ -145,7 +145,7 @@
 
 									<!-- Header LIVE -->
 									<div class="header_live">
-										<a href="#">
+										<a href="https://rugby.coachee.fr/lives">
 											<div class="d-flex flex-row align-items-center justify-content-start">
 												<div style="padding-left: 0px;">live</div>
 
@@ -237,12 +237,20 @@
   									</li>
   									<li class="d-flex flex-row align-items-start justify-content-start">
   										<div>E-mail</div>
-  										<div>yourmail@gmail.com</div>
+  										<div>mail@gmail.com</div>
   									</li>
   								</ul>
   							</div>
   						</div>
   					</div>
+						<div class="col-lg-4 order-lg-3 order-2">
+							<div class="newsletter">
+								<div class="newsletter_title">Nos autres partenaires</div>
+								<li class="d-flex flex-row align-items-start justify-content-start">
+									<div>Alredis ....</div>
+								</li>
+							</div>
+						</div>
 
   				</div>
   			</div>
