--- a/PARC/templates/index.html
+++ b/PARC/templates/index.html
@@ -163,7 +163,15 @@
 
 
 							<div class="result_text">
-								<p>Le club a été fondé en 1972.... bla bla Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan dolor id enim lacinia, sed feugiat ex suscipit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan dolor id enim lacinia, sed feugiat ex suscipit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan dolor id enim lacinia, sed feugiat ex suscipit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan dolor id enim lacinia, sed feugiat ex suscipit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan dolor id enim lacinia, sed feugiat ex suscipit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan dolor id enim lacinia, sed feugiat ex suscipit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan dolor id enim lacinia, sed feugiat ex suscipit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan dolor id enim lacinia, sed feugiat ex suscipit.</p>
+								<p>Le Pays d'Auray rugby club a été fondé en 1972 et est actuellement le deuxième club du morbihan. Le club est fort de plus de 300 licenciée dont une grande partie (165) ont moins de 18 ans, ce qui fait du PARC un vrai club formateur.
+								L'équipe sénior A et B évolue en troisième division de fédérale tandis que l'équipe C participe au championnat térritorial breton. Le PARC c'est aussi une équipe féminines les 'breizhbarian' avec plus de 40 joueuses. Soucieux de la maitrise de la formation, de la préservation
+								de sa culture et de ses traditions, le PARC déploie son projet
+								sportif au travers :
+								de la formation initiale et continue,
+								du développement personnel,
+								(joueurs et encadrement),
+								des choix pédagogiques,
+								des contenus techniques</p>
 							</div>
 
 					</div>
