--- a/PARC/templates/senior.html
+++ b/PARC/templates/senior.html
@@ -10,7 +10,7 @@
 
 	<!-- Home -->
 
-	<div class="home_about d-flex flex-column align-items-start justify-content-end">
+	<div id="equipe" class="home_about d-flex flex-column align-items-start justify-content-end">
 		<div class="parallax_background parallax-window" data-parallax="scroll" data-image-src="{{ url_for('static', filename='images/senior3.jpg')}}" data-speed="0.8"></div>
 		<div class="container">
 			<div class="row">
@@ -52,7 +52,7 @@
 					</div>
 
 					<!-- About content -->
-					<div id="equipe" class="col-xl-6 order-xl-2 order-1">
+					<div  class="col-xl-6 order-xl-2 order-1">
 						<div class="about_content">
 							<div class="about_content_container">
 								<div class="section_title_container">
