--- a/PARC/templates/feminine.html
+++ b/PARC/templates/feminine.html
@@ -7,7 +7,7 @@
 	<!-- Home -->
 
 
-	<div class="home d-flex flex-column align-items-start justify-content-end">
+	<div id="equipe" class="home d-flex flex-column align-items-start justify-content-end">
 		<div class="parallax_background parallax-window" data-parallax="scroll" data-image-src="{{ url_for('static', filename='images/Fem4.png')}}" data-speed="0.8"></div>
 		<div class="container">
 			<div class="row">
@@ -36,7 +36,7 @@
 				<div class="col-xl-6 order-xl-2 order-1">
 					<div class="about_content">
 						<div class="about_content_container">
-							<div id="equipe" class="section_title_container">
+							<div  class="section_title_container">
 								<div class="section_title"><h1>about PARC</h1></div>
 							</div>
 							<div class="about_title">mission&vision</div>
